examples/pubsub/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pubsub-ingress
  namespace: inspr-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
    - host: inspr.com
      http:
        paths:
          - path: /publish
            pathType: Prefix
            backend:
              service:
                name: node-9f926641-474e-43a1-8a7d-31084eab06ce
                port:
                  number: 80
